--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     </head>
         
     <body>
+        <h1>Awesome App</h1>
+        <p>Proxima clase</p>
+
+
         <script src="js/js app.js"></script>
         
     </body>4
