--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Awesome App</title>
-
-
         <link rel="stylesheet" href="css/#style.css">
-
     </head>
         
     <body>
         <h1>Awesome App</h1>
         <p>Proxima clase</p>
-
-
+        <p>cambio</p>
         <script src="js/js app.js"></script>
-        
-    </body>4
+    </body>
