--- a/index.html
+++ b/index.html
@@ -2,13 +2,95 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Awesome App</title>
-        <link rel="stylesheet" href="css/#style.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
         
     <body>
-        <h1>Awesome App</h1>
-        <p>Proxima clase</p>
-        <p>cambio</p>
+        <header>
+            <div>
+                <figure>
+                    <img src="img/Logo.svg" alt="Logo">
+                </figure>
+                <nav>
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">feacture</a></li>
+                        <li><a href="#">pricing</a></li>
+                        <li><a href="#">download now</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <!-- header -->
+        <section>
+            <div>
+                <div>
+                    <h1>Awesome App <br>
+                            App Landing Template</h1>
+                    <p>An Awesome landing page template to showcase your app features, screenshots, pricing, user testimonials and download links.</p>
+                <ul>
+                    <li>Amazing Design to Present Your App</li>
+                    <li>Fully Responsive and Powered by Bootstrap & PaperKit </li>
+                    <li>Very Easy to Customize and Setup</li>
+                </ul>
+                <a href="#"> Start Exploring</a>
+
+                </div>
+                <figure>
+                    <img src="img/img-hero-banner.png" alt="Hero Hero banner">
+                </figure>
+            </div>
+        </section>
+        <!-- section -->
+        <section>
+            <div>
+                <h3>Showcase Your App</h3>
+                <p>Showcase your app in style with this <br>
+                        professional looking template</p>
+            </div>
+            <div>
+                <h3>Easy to Customize</h3>
+                <p>Easily customize the text and replace the  images to suit your own app. </p>
+            </div>
+            <div>
+                <h3>Unlimited Colors</h3>
+                <p>Easily change the colors in CSS that can go well with your branding.</p>
+            </div>
+            <div>
+                <h3>Responsive, HTML5, CSS3</h3>
+                <p>Our template is 100% responsive and <br>
+                        built with modern standards.</p>
+            </div>
+            <div>
+                <h3>Designed to Convert</h3>
+                <p>Designed to engage your user and increase your conversion.</p>
+            </div>
+            <div>
+                <h3>With no Boundaries</h3>
+                <p>Use Bootstrap and PaperKit to add additional components.</p>
+            </div>
+
+        </section>
+        <!-- section  -->
+        <section>
+            <div>
+                <figure>
+                    <img src="img/img-intro.png" alt="">
+                </figure>
+            </div>
+            <h2>What is Awesome App?</h2>
+            <span>Add a brief story about your app here, what purpose your app solves and why you think your user would want to have it on their device.</span>
+            <p>Re-establish the main use case of your app by listing them below. Make sure to place a relavent screenshot on the left.</p>
+            <ul>
+                <li>Amazing Design to Present Your App</li>
+                <li> Fully Responsive and Powered by Bootstrap & PaperKit</li>
+                <li>Very Easy to Customize and Setup</li>
+            </ul>
+        </section>
+    
         <script src="js/js app.js"></script>
     </body>
